# fire

./: .gitattributes  Cargo.toml  README.md  russian_readme.md
src/: help.rs  input.rs  lib.rs  main.rs  renderer.rs  simulation.rs  terminal.rs  theme.rs
