[package]
name = "fire-cli"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/horizonwiki/fire"
authors = ["horizonwiki"]
keywords = ["terminal", "animation", "rust", "ascii", "fire", "visualization"]

[[bin]]
name = "fire-cli"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "consoleapi", "handleapi"] }
